[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Player/yellow.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 34
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = -9.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CayoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
